Fixed Footer on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -84,5 +84,6 @@ a:visited {
     }
     tbody {
         overflow-x: hidden;
+        max-height: 400px;
     }
 }
